software/compiler/SCode.Compiler.Core/Parser/SCodeParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from SCodeParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class SCodeParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SINGLE_LINE_COMMENT=1, DELIMITED_COMMENT=2, WHITESPACES=3, BOOL=4, BREAK=5, 
		CASE=6, CHAR=7, CONST=8, CONTINUE=9, DECIMAL=10, DEFAULT=11, DO=12, ELSE=13, 
		EXTERN=14, FALSE=15, FOR=16, GOTO=17, INCLUDE=18, IF=19, INT=20, UINT=21, 
		LONG=22, NEW=23, NULL=24, RETURN=25, SIZEOF=26, STATIC=27, STRING=28, 
		STRUCT=29, SWITCH=30, TRUE=31, VOID=32, WHILE=33, IDENTIFIER=34, LITERAL_CHAR=35, 
		LITERAL_STRING=36, LITERAL_INT=37, LITERAL_INT_DEC=38, LITERAL_INT_HEX=39, 
		LITERAL_INT_BIN=40, LITERAL_DECIMAL=41, OPEN_BRACE=42, CLOSE_BRACE=43, 
		OPEN_BRACKET=44, CLOSE_BRACKET=45, OPEN_PARENS=46, CLOSE_PARENS=47, DOT=48, 
		COMMA=49, COLON=50, SEMICOLON=51, PLUS=52, MINUS=53, STAR=54, DIV=55, 
		PERCENT=56, AMP=57, BITWISE_OR=58, CARET=59, BANG=60, TILDE=61, ASSIGNMENT=62, 
		LT=63, GT=64, INTERR=65, DOUBLE_COLON=66, OP_COALESCING=67, OP_INC=68, 
		OP_DEC=69, OP_AND=70, OP_OR=71, OP_PTR=72, OP_EQ=73, OP_NE=74, OP_LE=75, 
		OP_GE=76, OP_ADD_ASSIGNMENT=77, OP_SUB_ASSIGNMENT=78, OP_MULT_ASSIGNMENT=79, 
		OP_DIV_ASSIGNMENT=80, OP_MOD_ASSIGNMENT=81, OP_AND_ASSIGNMENT=82, OP_OR_ASSIGNMENT=83, 
		OP_XOR_ASSIGNMENT=84, OP_LEFT_SHIFT=85, OP_LEFT_SHIFT_ASSIGNMENT=86, OP_RIGHT_SHIFT=87, 
		OP_RIGHT_SHIFT_ASSIGNMENT=88, OP_COALESCING_ASSIGNMENT=89, SHARP=90;
	public const int
		RULE_program = 0, RULE_customTypeName = 1, RULE_integerType = 2, RULE_baseType = 3, 
		RULE_type = 4, RULE_statement = 5, RULE_labeledStatement = 6, RULE_declarationStatement = 7, 
		RULE_includeDeclaration = 8, RULE_assemblyConstantDeclaration = 9, RULE_variableDeclaration = 10, 
		RULE_variableDeclarators = 11, RULE_variableDeclarator = 12, RULE_arraySpecifier = 13, 
		RULE_variableInitializer = 14, RULE_arrayInitializer = 15, RULE_structInitializer = 16, 
		RULE_structMembersInitializers = 17, RULE_structMemberInitializer = 18, 
		RULE_functionDeclaration = 19, RULE_functionSignature = 20, RULE_returnType = 21, 
		RULE_parameters = 22, RULE_parameter = 23, RULE_structDeclaration = 24, 
		RULE_structBody = 25, RULE_structMemberDeclaration = 26, RULE_embeddedStatement = 27, 
		RULE_simpleEmbeddedStatement = 28, RULE_ifBody = 29, RULE_forInitializer = 30, 
		RULE_forIterator = 31, RULE_switchSection = 32, RULE_switchLabel = 33, 
		RULE_expression = 34, RULE_nonAssignmentExpression = 35, RULE_assignment = 36, 
		RULE_assignmentOperator = 37, RULE_unaryExpression = 38, RULE_castExpression = 39, 
		RULE_primaryExpression = 40, RULE_memberAccess = 41, RULE_methodInvocation = 42, 
		RULE_argumentList = 43, RULE_arrayAccessExpression = 44, RULE_primaryExpressionStart = 45, 
		RULE_conditionalExpression = 46, RULE_orConditionalOrExpression = 47, 
		RULE_andConditionalExpression = 48, RULE_orBitwiseExpression = 49, RULE_xorBitwiseExpression = 50, 
		RULE_andBitwiseExpression = 51, RULE_equalityExpression = 52, RULE_relationalExpression = 53, 
		RULE_shiftExpression = 54, RULE_additiveExpression = 55, RULE_multiplicativeExpression = 56, 
		RULE_block = 57, RULE_statementList = 58, RULE_literal = 59, RULE_literalBoolean = 60, 
		RULE_identifier = 61;
	public static readonly string[] ruleNames = {
		"program", "customTypeName", "integerType", "baseType", "type", "statement", 
		"labeledStatement", "declarationStatement", "includeDeclaration", "assemblyConstantDeclaration", 
		"variableDeclaration", "variableDeclarators", "variableDeclarator", "arraySpecifier", 
		"variableInitializer", "arrayInitializer", "structInitializer", "structMembersInitializers", 
		"structMemberInitializer", "functionDeclaration", "functionSignature", 
		"returnType", "parameters", "parameter", "structDeclaration", "structBody", 
		"structMemberDeclaration", "embeddedStatement", "simpleEmbeddedStatement", 
		"ifBody", "forInitializer", "forIterator", "switchSection", "switchLabel", 
		"expression", "nonAssignmentExpression", "assignment", "assignmentOperator", 
		"unaryExpression", "castExpression", "primaryExpression", "memberAccess", 
		"methodInvocation", "argumentList", "arrayAccessExpression", "primaryExpressionStart", 
		"conditionalExpression", "orConditionalOrExpression", "andConditionalExpression", 
		"orBitwiseExpression", "xorBitwiseExpression", "andBitwiseExpression", 
		"equalityExpression", "relationalExpression", "shiftExpression", "additiveExpression", 
		"multiplicativeExpression", "block", "statementList", "literal", "literalBoolean", 
		"identifier"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'bool'", "'break'", "'case'", "'char'", "'const'", 
		"'continue'", "'decimal'", "'default'", "'do'", "'else'", "'extern'", 
		"'false'", "'for'", "'goto'", "'include'", "'if'", "'int'", "'uint'", 
		"'long'", "'new'", "'null'", "'return'", "'sizeof'", "'static'", "'string'", 
		"'struct'", "'switch'", "'true'", "'void'", "'while'", null, null, null, 
		null, null, null, null, null, "'{'", "'}'", "'['", "']'", "'('", "')'", 
		"'.'", "','", "':'", "';'", "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", 
		"'|'", "'^'", "'!'", "'~'", "'='", "'<'", "'>'", "'?'", "'::'", "'??'", 
		"'++'", "'--'", "'&&'", "'||'", "'->'", "'=='", "'!='", "'<='", "'>='", 
		"'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<'", 
		"'<<='", "'>>'", "'>>='", "'??='", "'#'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SINGLE_LINE_COMMENT", "DELIMITED_COMMENT", "WHITESPACES", "BOOL", 
		"BREAK", "CASE", "CHAR", "CONST", "CONTINUE", "DECIMAL", "DEFAULT", "DO", 
		"ELSE", "EXTERN", "FALSE", "FOR", "GOTO", "INCLUDE", "IF", "INT", "UINT", 
		"LONG", "NEW", "NULL", "RETURN", "SIZEOF", "STATIC", "STRING", "STRUCT", 
		"SWITCH", "TRUE", "VOID", "WHILE", "IDENTIFIER", "LITERAL_CHAR", "LITERAL_STRING", 
		"LITERAL_INT", "LITERAL_INT_DEC", "LITERAL_INT_HEX", "LITERAL_INT_BIN", 
		"LITERAL_DECIMAL", "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", 
		"OPEN_PARENS", "CLOSE_PARENS", "DOT", "COMMA", "COLON", "SEMICOLON", "PLUS", 
		"MINUS", "STAR", "DIV", "PERCENT", "AMP", "BITWISE_OR", "CARET", "BANG", 
		"TILDE", "ASSIGNMENT", "LT", "GT", "INTERR", "DOUBLE_COLON", "OP_COALESCING", 
		"OP_INC", "OP_DEC", "OP_AND", "OP_OR", "OP_PTR", "OP_EQ", "OP_NE", "OP_LE", 
		"OP_GE", "OP_ADD_ASSIGNMENT", "OP_SUB_ASSIGNMENT", "OP_MULT_ASSIGNMENT", 
		"OP_DIV_ASSIGNMENT", "OP_MOD_ASSIGNMENT", "OP_AND_ASSIGNMENT", "OP_OR_ASSIGNMENT", 
		"OP_XOR_ASSIGNMENT", "OP_LEFT_SHIFT", "OP_LEFT_SHIFT_ASSIGNMENT", "OP_RIGHT_SHIFT", 
		"OP_RIGHT_SHIFT_ASSIGNMENT", "OP_COALESCING_ASSIGNMENT", "SHARP"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SCodeParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SCodeParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SCodeParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SCodeParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SCodeParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISCodeParserVisitor<TResult> typedVisitor = visitor as ISCodeParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3636733939784865712L) != 0) || ((((_la - 68)) & ~0x3f) == 0 && ((1L << (_la - 68)) & 4194307L) != 0)) {
				{
				{
				State = 124;
				statement();
				}
				}
				State = 129;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 130;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CustomTypeNameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public CustomTypeNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_customTypeName; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISCodeParserVisitor<TResult> typedVisitor = visitor as ISCodeParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCustomTypeName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CustomTypeNameContext customTypeName() {
		CustomTypeNameContext _localctx = new CustomTypeNameContext(Context, State);
		EnterRule(_localctx, 2, RULE_customTypeName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132;
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IntegerTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LONG() { return GetToken(SCodeParser.LONG, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode UINT() { return GetToken(SCodeParser.UINT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(SCodeParser.INT, 0); }
		public IntegerTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_integerType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISCodeParserVisitor<TResult> typedVisitor = visitor as ISCodeParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntegerType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IntegerTypeContext integerType() {
		IntegerTypeContext _localctx = new IntegerTypeContext(Context, State);
		EnterRule(_localctx, 4, RULE_integerType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 134;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 7340032L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BaseTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IntegerTypeContext integerType() {
			return GetRuleContext<IntegerTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DECIMAL() { return GetToken(SCodeParser.DECIMAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL() { return GetToken(SCodeParser.BOOL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CHAR() { return GetToken(SCodeParser.CHAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(SCodeParser.STRING, 0); }
		public BaseTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_baseType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISCodeParserVisitor<TResult> typedVisitor = visitor as ISCodeParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBaseType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BaseTypeContext baseType() {
		BaseTypeContext _localctx = new BaseTypeContext(Context, State);
		EnterRule(_localctx, 6, RULE_baseType);
		try {
			State = 141;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INT:
			case UINT:
			case LONG:
				EnterOuterAlt(_localctx, 1);
				{
				State = 136;
				integerType();
				}
				break;
			case DECIMAL:
				EnterOuterAlt(_localctx, 2);
				{
				State = 137;
				Match(DECIMAL);
				}
				break;
			case BOOL:
				EnterOuterAlt(_localctx, 3);
				{
				State = 138;
				Match(BOOL);
				}
				break;
			case CHAR:
				EnterOuterAlt(_localctx, 4);
				{
				State = 139;
				Match(CHAR);
				}
				break;
			case STRING:
				EnterOuterAlt(_localctx, 5);
				{
				State = 140;
				Match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BaseTypeContext baseType() {
			return GetRuleContext<BaseTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CustomTypeNameContext customTypeName() {
			return GetRuleContext<CustomTypeNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] STAR() { return GetTokens(SCodeParser.STAR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STAR(int i) {
			return GetToken(SCodeParser.STAR, i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISCodeParserVisitor<TResult> typedVisitor = visitor as ISCodeParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case BOOL:
			case CHAR:
			case DECIMAL:
			case INT:
			case UINT:
			case LONG:
			case STRING:
				{
				State = 143;
				baseType();
				}
				break;
			case IDENTIFIER:
				{
				State = 144;
				customTypeName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 150;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==STAR) {
				{
				{
				State = 147;
				Match(STAR);
				}
				}
				State = 152;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LabeledStatementContext labeledStatement() {
			return GetRuleContext<LabeledStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationStatementContext declarationStatement() {
			return GetRuleContext<DeclarationStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EmbeddedStatementContext embeddedStatement() {
			return GetRuleContext<EmbeddedStatementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISCodeParserVisitor<TResult> typedVisitor = visitor as ISCodeParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_statement);
		try {
			State = 156;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 153;
				labeledStatement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 154;
				declarationStatement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 155;
				embeddedStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LabeledStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(SCodeParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public LabeledStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_labeledStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISCodeParserVisitor<TResult> typedVisitor = visitor as ISCodeParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLabeledStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LabeledStatementContext labeledStatement() {
		LabeledStatementContext _localctx = new LabeledStatementContext(Context, State);
		EnterRule(_localctx, 12, RULE_labeledStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 158;
			identifier();
			State = 159;
			Match(COLON);
			State = 160;
			statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationContext variableDeclaration() {
			return GetRuleContext<VariableDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMICOLON() { return GetToken(SCodeParser.SEMICOLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public IncludeDeclarationContext includeDeclaration() {
			return GetRuleContext<IncludeDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssemblyConstantDeclarationContext assemblyConstantDeclaration() {
			return GetRuleContext<AssemblyConstantDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDeclarationContext functionDeclaration() {
			return GetRuleContext<FunctionDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StructDeclarationContext structDeclaration() {
			return GetRuleContext<StructDeclarationContext>(0);
		}
		public DeclarationStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declarationStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISCodeParserVisitor<TResult> typedVisitor = visitor as ISCodeParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclarationStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationStatementContext declarationStatement() {
		DeclarationStatementContext _localctx = new DeclarationStatementContext(Context, State);
		EnterRule(_localctx, 14, RULE_declarationStatement);
		try {
			State = 169;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 162;
				variableDeclaration();
				State = 163;
				Match(SEMICOLON);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 165;
				includeDeclaration();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 166;
				assemblyConstantDeclaration();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 167;
				functionDeclaration();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 168;
				structDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
